--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ tr:nth-child(even) {
 /* Subheading Row Styling (Grouped Dates) */
 table tbody tr.subheading-row td {
     font-size: 1.1rem;
-    background-color: #8088ff !important;
+    background-color: #ffffff !important;
     color: #000000;
     text-align: center !important;
     padding: 10px;
