--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,65 @@ h2 {
     background-color: #92a6bb; /* Slightly darker blue on hover */
 }
 
+.search-button button {
+    flex: 0;
+    padding: 0.5rem 1rem; /* Adjusts button size for easier tapping */
+    width: 50%; /* Ensure full width for smaller screens if needed */
+    cursor: pointer; /* Pointer cursor on hover */  
+    border-radius: 5px; /* Rounded corners for uniformity */
+
+}
+.search-button button:hover {
+    flex: 0;
+    padding: 0.5rem 1rem; /* Adjusts button size for easier tapping */
+    width: 50%; /* Ensure full width for smaller screens if needed */
+    border-radius: 5px; /* Rounded corners for uniformity */
+    background-color: #92a6bb; /* Slightly darker blue on hover */
+}
+
 select, input, button {
     padding: 0.3125rem; /* 5px */
     font-size: 1rem; /* 16px */
     margin-right: 0.625rem; /* 10px */
 }
+
+
+#tabs {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+    width: 100%;
+}
+
+.tab-button {
+    padding: 0.5rem 1rem;
+    border: none;
+    cursor: pointer;
+    background-color: #444;
+    color: white;
+    margin: 0 0.5rem;
+    font-size: 1rem;
+    transition: background-color 0.3s ease; 
+    width: 400px;
+    border-radius: 2px; 
+}
+
+.tab-button.active {
+    background-color: #ddd;
+    color: black;
+
+}
+
+.tab-content {
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
+.tab-content.active {
+    display: block;
+}
+
 
 
 /* Table Styling */
@@ -128,38 +182,7 @@ table tbody tr.subheading-row td {
     border-collapse: collapse;
 }
 
-#tabs {
-    display: flex;
-    justify-content: center;
-    margin: 1rem 0;
-    width: 100%;
-}
 
-.tab-button {
-    padding: 0.5rem 1rem;
-    border: none;
-    cursor: pointer;
-    background-color: #ddd;
-    margin: 0 0.5rem;
-    font-size: 1rem;
-    transition: background-color 0.3s ease; 
-    width: 400px;
-}
-
-.tab-button.active {
-    background-color: #444;
-    color: white;
-}
-
-.tab-content {
-    display: none;
-    width: 100%;
-    height: 100%;
-}
-
-.tab-content.active {
-    display: block;
-}
 
 /* Media Queries for Smaller Screens */
 @media (max-width: 768px) {
